Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.0.0 Beta 2
-
Fix Version/s: 5.0.0 Beta 2
-
Component/s: Documentation
-
Labels:None
-
Commits:7fcedd1fc7d73cc7b4eb5619352159d8a9f16e45
Description
It should be possible to run qdoc in two passes. In pass 1 mode, qdoc should read and parse all the source files but only generate an index file as output. In pass 2 mode, qdoc reads and parses the source files as well as all the index files produced by running qdoc in pass 1 mode, and produces the documentation files as output.