src/tools/qdoc/generator.h
@@ -68,6 +68,8 @@ class QDocDatabase;
 class Generator
 {
 public:
+    enum Passes { Both, Prepare, Generate };
+
     Generator();
     virtual ~Generator();
 
@@ -90,6 +92,9 @@ public:
     static void setDebugSegfaultFlag(bool b);
     static bool debugging() { return debugging_; }
     static bool noLinkErrors() { return noLinkErrors_; }
+    static void setQDocPass(Passes pass) { qdocPass_ = pass; }
+    static bool runPrepareOnly() { return (qdocPass_ == Prepare); }
+    static bool runGenerateOnly() { return (qdocPass_ == Generate); }
 
 protected:
     virtual void beginSubPage(const InnerNode* node, const QString& fileName);
@@ -193,6 +198,7 @@ private:
     static QStringList styleFiles;
     static bool debugging_;
     static bool noLinkErrors_;
+    static Passes qdocPass_;
 
     void appendFullName(Text& text,
                         const Node *apparentNode,
